# Linux-Fedora-System-Control

./: LICENSE  README.md  RULE.md  Schema.md  index.html  package.json  pnpm-lock.yaml  test.html  vite.config.ts
packaging/: 99-purrdora.rules  com.purrdora.pkexec.policy  install.sh
resources/: 99-purrdora.rules  fedora-system-control.desktop  install-autostart.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  bluetooth.rs  driver_scan.rs  helper.rs  ipc.rs  lib.rs  main.rs  mangohud.rs  monitor.rs  mpris.rs  msi_ec.rs  operating_mode.rs  optimizer.rs  privileged.rs
src/components/: AudioMixerWidget.tsx  BottomDock.tsx  ConnectedDevicesWidget.tsx  DriversPage.tsx  FooterStrip.tsx  GameModePage.tsx  Layout.tsx  LiveSessionTime.tsx  MediaPlayerWidget.tsx  MsiCenterPage.tsx  QuickActions.tsx  ShutdownTimer.tsx
src/components/ui/: button.tsx
src/components/widgets/: FirmwareUpdateList.tsx  GameStatusWidget.tsx  GpuWidget.tsx  HardwareHealthSummary.tsx  HardwareHealthWidget.tsx  HardwareStatsWidget.tsx  MsiEcWidget.tsx  OrphanDeviceList.tsx  PerformanceHistoryWidget.tsx  RunningGameWidget.tsx  SessionCard.tsx  SessionToolsWidget.tsx  SystemMetricsWidget.tsx  SystemOptimizationWidget.tsx  TopProcessesWidget.tsx  factory.tsx
src/hooks/: useAutoResize.ts  useDebounce.ts  useIpcListener.ts
src/lib/: dashboardFetchQueue.ts
src/store/: useHardwareHealthStore.ts  useSystemStore.ts
src/types/: schema.d.ts
